@@ -152,4 +152,6 @@ jQuery(function($) {
 	$('.jqueryinputset').buttonset();
 
 	createPlaceholders();
+
+	$('form').enterSubmit('input[type=submit].main');
 });
